pom.xml edits